# boss

./: .gitignore  README.md  agent_scheduler.py  boss.py  docker-compose.yml  models.py  mongodb-init.js  pyproject.toml  requirements.txt  start.py  utils.py  workflow_state_manager.py
.github/workflows/: run_unit_tests.yml
boss/: __init__.py  boss.py  boss_prompts.py  models.py  pytest.ini  setup.py  start.py  utils.py
boss/boss/: boss.py  boss_prompts.py  events.py  llm_client.py  models.py  self_play.py  task_executor.py  utils.py
boss/boss/wrappers/: wrapper_agent.py  wrapper_api_explorer.py  wrapper_api_explorer_agent.py  wrapper_browser_agent.py  wrapper_conversation.py  wrapper_dig.py  wrapper_dig_agent.py  wrapper_get_ssl.py  wrapper_html.py  wrapper_html_analyzer_agent.py  wrapper_ping_agent.py  wrapper_rest.py  wrapper_rest_tester.py  wrapper_scan_port_agent.py  wrapper_websocket.py  (+9 more)
boss/tests/: test_boss.py  test_cname.py  test_get_ssl.py  test_http_headers.py  test_mx.py  test_scan_ports.py  test_selfplay_mcts.py  test_sql_injection.py  test_sql_injection_2.py  test_traceroute.py  test_utills.py  test_whois.py
boss/wrappers/: wrapper_agent.py  wrapper_conversation.py  wrapper_get_ssl.py  wrapper_ping_agent.py  wrapper_scan_ports.py
tests/: test_agent_scheduler.py  test_boss.py  test_utills.py  test_workflow_state_manager.py
web/: Dockerfile  app.py  requirements.txt
web/templates/: 404.html  500.html  index.html  new_task.html  task_detail.html
wrappers/: wrapper_agent.py  wrapper_conversation.py  wrapper_network_scan.py  wrapper_ping_agent.py
(+24 files in other folders)
