[project]
name = "boss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "openai",
 "aiokafka",
 "aiohttp",
 "aiodns",
 "motor",
 "python-dotenv",
 "browser_use",
 "colorlog",
 "google-genai",
 "anthropic",
 "flask",
 "flask-WTF",
 "pytest>=8.3.4",
 "pytest-asyncio>=0.25.2",
]
